Ajouter toutes les annontation swagger pour tester le API
